String to curves, to instance on points causes crash #92460

Closed
opened 2021-10-25 00:50:14 +02:00 by Gehrig · 9 comments

System Information
Operating system: Windows 10
Graphics card: RTX 3090

Blender Version
Broken: 3.0 Daily build as of 10/24
Worked: n/a

Short description of error
When connecting string to curves, to the instance on points node, into the geometry out node of a geometry nodes modifier, it causes an instant crash. Please see attached blend below.

Exact steps for others to reproduce the error
Please find example blend here. test.blend

  1. Click on default cube
  2. go into the existing geometry nodes modifier.
  3. Click and drag the 'Instances' connector to the geometry output node, the one that is coming after the string to curves node.

If you don't have anything in the string field, the crash doesn't seem to happen.

**System Information** Operating system: Windows 10 Graphics card: RTX 3090 **Blender Version** Broken: 3.0 Daily build as of 10/24 Worked: n/a **Short description of error** When connecting string to curves, to the instance on points node, into the geometry out node of a geometry nodes modifier, it causes an instant crash. Please see attached blend below. **Exact steps for others to reproduce the error** Please find example blend here. [test.blend](https://archive.blender.org/developer/F11475648/test.blend) 1. Click on default cube 2. go into the existing geometry nodes modifier. 3. Click and drag the 'Instances' connector to the geometry output node, the one that is coming after the string to curves node. If you don't have anything in the string field, the crash doesn't seem to happen.
Author

Added subscriber: @Gehrig

Added subscriber: @Gehrig

Added subscriber: @erik85

Added subscriber: @erik85

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Can reproduce. Could not reproduce with any other nodes than "String to Curves" which makes me think it could be the culprit.

Can reproduce. Could not reproduce with any other nodes than "String to Curves" which makes me think it could be the culprit.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

@erik85 : thx triaging, remember to tag the corresponding module though, see https://wiki.blender.org/wiki/Process/Bug_Reports/Triaging_Playbook

@erik85 : thx triaging, remember to tag the corresponding module though, see https://wiki.blender.org/wiki/Process/Bug_Reports/Triaging_Playbook

In #92460#1240640, @lichtwerk wrote:
@erik85 : thx triaging, remember to tag the corresponding module though, see https://wiki.blender.org/wiki/Process/Bug_Reports/Triaging_Playbook

RIght, unfortunately I don't have editing rights yet.

> In #92460#1240640, @lichtwerk wrote: > @erik85 : thx triaging, remember to tag the corresponding module though, see https://wiki.blender.org/wiki/Process/Bug_Reports/Triaging_Playbook RIght, unfortunately I don't have editing rights yet.

This issue was referenced by b15e1861ac

This issue was referenced by b15e1861ac1d8e98af8f8d33cb4e59cf0e0d3419
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2021-10-25 15:14:13 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92460
No description provided.